[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article one | Parth khunteta
         </title>
+        <meta name ="viewport" content="width=device_width, initial-scale=1" />
     </head>
     <body>
         <div>
