[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -16,6 +16,7 @@
         <div>
             19 august 2017
         </div>
+        <div>
      <p>
      this is the content for my third artice.this is the content for my third artice.this is the content for my third artice.
       </p>
