--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,9 +4,20 @@
             Article one | Parth khunteta
         </title>
         <meta name ="viewport" content="width=device_width, initial-scale=1" />
+        <style>
+           .contanier
+           {
+               max-width=800px;
+               margin=0 auto;
+               color:grey;
+               font-family= sans-serif;
+           }
+        </style>
     </head>
+    
     <body>
-        <div>
+        <div class="container">
+            <div>
             <a href="/"> home </a>
         </div>
         <hr/>
@@ -26,6 +37,7 @@
             <p>
                 this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article this is the content for  my first article 
             </p>
+        </div>
         </div>
     </body>
         
