[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,8 +4,23 @@
             Article three | Parth khunteta
         </title>
         <meta name ="viewport" content="width=device_width, initial-scale=1" />
+         <style>
+             .container
+           {
+               color: grey;
+             max-width: 800px;
+              font-family: sans-serif;
+              padding-top: 60px;
+              padding-left: 20px;
+              padding-right: 20px;
+               margin: 0 auto;
+           }
+           }
+        </style>
+    
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/"> home </a>
         </div>
@@ -20,6 +35,7 @@
      <p>
      this is the content for my third artice.this is the content for my third artice.this is the content for my third artice.
       </p>
+        </div>
         </div>
     </body>
      </html>
