[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -20,7 +20,7 @@
     
     </head>
     <body>
-        <div class ="contanier">
+        <div class ="container">
         <div>
             <a href="/"> home </a>
         </div>
