[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,20 +4,8 @@
             Article one | Parth khunteta
         </title>
         <meta name ="viewport" content="width=device_width, initial-scale=1" />
-        <style>
-             .container
-           {
-               color: grey;
-             max-width: 800px;
-              font-family: sans-serif;
-              padding-top: 60px;
-              padding-left: 20px;
-              padding-right: 20px;
-               margin: 0 auto;
-           }
-           
-        </style>
-    </head>
+        <link href="/ui/style.css" rel="stylesheet" />
+           </head>
     
     <body>
         <div class="container">
