[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,7 @@
             Article two | Parth khunteta
         </title>
         <meta name ="viewport" content="width=device_width, initial-scale=1" />
+         <link href="/ui/style.css" rel="stylesheet" />
          <style>
              .container
            {
@@ -15,7 +16,7 @@
               padding-right: 20px;
                margin: 0 auto;
            }
-           }
+           
         </style>
     
     </head>
