[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am parth khunteta and this is my first webapp.
             <h4>a new heading</h4>
             i have made some chnges locally
+            <script>
+                alert('HI, I AM JAVASCRIPT');
+            </script>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
