--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
             <hr>
             <br/>
             <input type="text" id="name" placeholder="name"> </input>
-            <input type="submit" value="submit"></input >
+            <input type="submit" value="submit" id="submit_btn"></input >
             <ul>
                 <li>name 1</li>
                 <li>name 2</li>
