--- a/ui/index.html
+++ b/ui/index.html
@@ -32,10 +32,8 @@
             <br/>
             <input type="text" id="name" placeholder="name"> </input>
             <input type="submit" value="submit" id="submit_btn"></input >
-            <ul>
-                <li>name 1</li>
-                <li>name 2</li>
-                <li>name 3</li>
+            <ul id="namelist">
+                
                 
             </ul>
         </div>
